@@ -50,7 +50,7 @@
 			<div class="page-header-small">
 				<h1 data-i18n="SystemSetup">System Setup</h1>
 			</div>
-			<h2 data-i18n="User Interface">User Interface</h2>
+			<h2><span data-i18n="User Interface"></span>:</h2>
 			<table class="display" id="languagetable" border="0" cellpadding="0" cellspacing="0">
 			<tr>
 				<td align="right" style="width:60px"><label for="Latitude">Language: </label></td>
@@ -119,7 +119,7 @@
 			
 			</table>
 			<br>
-			<h2><span data-i18n="SecPanelProtection">Security Panel</span>:</h2>
+			<h2><span data-i18n="SecurityPanel"></span>:</h2>
 			<table class="display" id="sectable" border="0" cellpadding="0" cellspacing="0">
 			<tr>
 				<td align="right" style="width:60px"><label><span data-i18n="Password"></span>: </label></td>
@@ -316,7 +316,7 @@
 		  <div class="page-header-small">
 			<h1 data-i18n="Meter/Counter Setup">Meter/Counter Setup</h1>
 		  </div>
-			<h2>Wind Meter:</h2>
+			<h2><span data-i18n="Wind Meter"></span>:</h2>
 			<table class="display" id="windmetertable" border="0" cellpadding="0" cellspacing="0">
 				<tr>
 					<td align="right" style="width:60px"><label><span data-i18n="Display"></span>: </label></td>
